--- a/src/app/pages/albums/albums.component.html
+++ b/src/app/pages/albums/albums.component.html
@@ -8,7 +8,7 @@
                     </div>
                     <div class="album-info">
                         <h2 class="title">{{album.title}}</h2>
-                        <p>({{album.photosCount}}) Pictures</p>
+                        <p>({{album.photosCount}} Pictures)</p>
                     </div>
                 </div>
             </li>
